--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,10 @@
   </head>
   <body>
     <h1>REGISTRATION FORM</h1>
-  </body>
+    <form>
+      <input type="text" placeholder="Your name"/><br/><br/>
+      <input type="text" placeholder="email"/><br/><br/>
+      <input type="text" placeholder="password"/><br/><br/>
+   </body>
 </html>
 
