--- a/Index.html
+++ b/Index.html
@@ -7,8 +7,11 @@
     <h1>REGISTRATION FORM</h1>
     <form>
       <input type="text" placeholder="Your name"/><br/><br/>
-      <input type="text" placeholder="email"/><br/><br/>
-      <input type="text" placeholder="password"/><br/><br/>
+      <input type="email" placeholder="Your email address"/><br/><br/>
+      <input type="password" placeholder="password"/>
+      <input type="password" placeholder=" confirm password"/><br/><br/>
+      Date of birth:<input type="date"/><br/><br/>
+     
    </body>
 </html>
 
