--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,9 @@
       <input type="password" placeholder="password"/>
       <input type="password" placeholder=" confirm password"/><br/><br/>
       Date of birth:<input type="date"/><br/><br/>
+      <input type="submit"/><br/><br/>
      
+   </body>
    </body>
 </html>
 
