--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,10 @@
     <h1>REGISTRATION FORM</h1>
     <form>
       <input type="text" placeholder="Your name"/><br/><br/>
+      Gender:
+      Male:<input type="radio" value="male"name="gender"/>
+      Female:<input type="radio" value="female"name="gender"/>
+      Others:<input type="radio" value="others"name="gender"/><br/><br/>
       <input type="email" placeholder="Your email address"/><br/><br/>
       <input type="password" placeholder="password"/>
       <input type="password" placeholder=" confirm password"/><br/><br/>
