--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,11 @@
       <input type="password" placeholder="password"/>
       <input type="password" placeholder=" confirm password"/><br/><br/>
       Date of birth:<input type="date"/><br/><br/>
+      Languages known:
+      Malayalam:<input type="checkbox" value="mal"/>
+      English:<input type="checkbox" value="eng"/>
+      Hindi:<input type="checkbox" value="hin"/>
+      
       <input type="submit"/><br/><br/>
      
    </body>
