--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
       Languages known:
       Malayalam:<input type="checkbox" value="mal"/>
       English:<input type="checkbox" value="eng"/>
-      Hindi:<input type="checkbox" value="hin"/>
+      Hindi:<input type="checkbox" value="hin"/><br/><br/>
       
       <input type="submit"/><br/><br/>
      
