--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     <h1>REGISTRATION FORM</h1>
     <form>
       <input type="text" placeholder="Your name"/><br/><br/>
+      <textarea rows="5"cols="30"placeholder="Your Address"></textarea>
       Gender:
       Male:<input type="radio" value="male"name="gender"/>
       Female:<input type="radio" value="female"name="gender"/>
