--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,14 @@
       Male:<input type="radio" value="male"name="gender"/>
       Female:<input type="radio" value="female"name="gender"/>
       Others:<input type="radio" value="others"name="gender"/><br/><br/>
+      University:
+      <select required>
+        <option>Kannur University</option>
+        <option>University of Calicut</option>
+        <option>MG University</option>
+        <option>Kerala University</option>
+      </select>
+      <br/><br/>
       <input type="email" placeholder="Your email address"/><br/><br/>
       <input type="password" placeholder="password"/>
       <input type="password" placeholder=" confirm password"/><br/><br/>
