--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,16 @@
         <option>Kerala University</option>
       </select>
       <br/><br/>
+      Programmes:
+      <input type=text list="programmes"/>
+      <datalist id="programmes">
+        <option value="Computer Science"/>
+        <option value="Physics"/>
+        <option value="Chemistry"/>
+        <option value="Mathematics"/>
+        <option value="Statistics"/>
+      </datalist>  
+      <br/><br/>
       <input type="email" placeholder="Your email address"/><br/><br/>
       <input type="password" placeholder="password"/>
       <input type="password" placeholder=" confirm password"/><br/><br/>
