--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>REGISTRATION FORM</h1>
     <form>
-      <input type="text" placeholder="Your name"/><br/><br/>
+      <input type="text" placeholder="Your name" required/><br/><br/>
       <textarea rows="5"cols="30"placeholder="Your Address"></textarea><br/><br/>
       Gender:
       Male:<input type="radio" value="male"name="gender"/>
@@ -31,7 +31,7 @@
       </datalist>  
       <br/><br/>
       <input type="email" placeholder="Your email address"/><br/><br/>
-      <input type="password" placeholder="password"/>
+      <input type="password" placeholder="password"/><br/><br/>
       <input type="password" placeholder=" confirm password"/><br/><br/>
       Date of birth:<input type="date"/><br/><br/>
       Languages known:
@@ -39,7 +39,7 @@
       English:<input type="checkbox" value="eng"/>
       Hindi:<input type="checkbox" value="hin"/><br/><br/>
       
-      <input type="submit"/><br/><br/>
+      <a href="Form.html">SUBMIT</a><br/><br/>
      
    </body>
    </body>
