--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>REGISTRATION FORM</h1>
-    <form>
+    <form action="/Form.html">
       <input type="text" placeholder="Your name" required/><br/><br/>
       <textarea rows="5"cols="30"placeholder="Your Address"></textarea><br/><br/>
       Gender:
