--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
       English:<input type="checkbox" value="eng"/>
       Hindi:<input type="checkbox" value="hin"/><br/><br/>
       
-      <input type="submit"/><br/><br/>
+      <input type="submit" value="submit"/><br/><br/>
      
    </body>
    </body>
