--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
         <option value="Statistics"/>
       </datalist>  
       <br/><br/>
-      <input type="email" placeholder="Your email address"/><br/><br/>
+      <input type="email" placeholder="Your email address" required/><br/><br/>
       <input type="password" placeholder="password"/><br/><br/>
       <input type="password" placeholder=" confirm password"/><br/><br/>
       Date of birth:<input type="date"/><br/><br/>
