--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
       Hindi:<input type="checkbox" value="hin"/><br/><br/>
       
       <input type="submit" value="Click here to verify your data in correct format"/><br/><br/>
-     
+      <a href="Form.html">Submit</a>
    </body>
    </body>
 </html>
