--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>REGISTRATION FORM</h1>
-    <form action="/Form.html">
+    <form action="Form.html">
       <input type="text" placeholder="Your name" required/><br/><br/>
       <textarea rows="5"cols="30"placeholder="Your Address"></textarea><br/><br/>
       Gender:
@@ -39,7 +39,7 @@
       English:<input type="checkbox" value="eng"/>
       Hindi:<input type="checkbox" value="hin"/><br/><br/>
       
-      <input type="submit" value="Click here to verify your data in correct format"/><br/><br/>
+      <input type="submit" value="submit"/><br/><br/>
       <a href="Form.html">Submit</a>
    </body>
    </body>
