--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>REGISTRATION FORM</h1>
     <form action="Form.html">
-      <input type="text" placeholder="Your name" required/><br/><br/>
+      <input type="text" placeholder="Your name" required pattern="[a-zA-Z]+" title="Name should contain only letters and it should have atleast one letter"/><br/><br/>
       <textarea rows="5"cols="30"placeholder="Your Address"></textarea><br/><br/>
       Gender:
       Male:<input type="radio" value="male"name="gender"/>
